codex-rs/core/tests/suite/snapshots/all__suite__compact__manual_compact_without_prev_user_shapes.snap
---
source: core/tests/suite/compact.rs
expression: "format_labeled_requests_snapshot(\"Manual /compact with no prior user turn currently still issues a compaction request; follow-up turn carries canonical context and the new user message.\",\n&[(\"Local Compaction Request\", &requests[0]),\n(\"Local Post-Compaction History Layout\", &requests[1]),])"
---
Scenario: Manual /compact with no prior user turn currently still issues a compaction request; follow-up turn carries canonical context and the new user message.

## Window 1
-- request 1 (compaction; Local Compaction Request) --
00:message/user:
    <SUMMARIZATION_PROMPT>

## Window 2 (after request 1: input diverged at item 00, settings changed (parallel_tool_calls, tools))
-- request 2 (turn; Local Post-Compaction History Layout) --
00:message/user:
    <COMPACTION_SUMMARY>
    MANUAL_EMPTY_SUMMARY
01:message/developer[3]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <USAGE_STATS_INSTRUCTIONS>
    [03] <PROJECT_AUTOMATION_INSTRUCTIONS>
02:message/user:
    <ENVIRONMENT_CONTEXT>
03:message/user:
    AFTER_MANUAL_EMPTY_COMPACT
