codex-rs/core/tests/suite/snapshots/all__suite__compact__mid_turn_compaction_shapes.snap
---
source: core/tests/suite/compact.rs
expression: "format_history_snapshot(\"True mid-turn continuation compaction after tool output: compact request includes tool artifacts, and the continuation request includes the summary in the same turn.\",\n&[first_turn_mock.single_request(), auto_compact_mock.single_request(),\npost_auto_compact_mock.single_request(),])"
---
Scenario: True mid-turn continuation compaction after tool output: compact request includes tool artifacts, and the continuation request includes the summary in the same turn.

## Window 1
-- request 1 (turn) --
00:message/developer[3]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <USAGE_STATS_INSTRUCTIONS>
    [03] <PROJECT_AUTOMATION_INSTRUCTIONS>
01:message/user:
    <ENVIRONMENT_CONTEXT>
02:message/user:
    function call limit push

## Window 2 (after request 1: settings changed (parallel_tool_calls, tools))
-- request 2 (compaction) --
00:message/developer[3]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <USAGE_STATS_INSTRUCTIONS>
    [03] <PROJECT_AUTOMATION_INSTRUCTIONS>
01:message/user:
    <ENVIRONMENT_CONTEXT>
02:message/user:
    function call limit push
03:function_call/test_tool:{}
04:function_call_output:unsupported call: test_tool
05:message/user:
    <SUMMARIZATION_PROMPT>

## Window 3 (after request 2: input diverged at item 03, settings changed (parallel_tool_calls, tools))
-- request 3 (turn) --
00:message/developer[3]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <USAGE_STATS_INSTRUCTIONS>
    [03] <PROJECT_AUTOMATION_INSTRUCTIONS>
01:message/user:
    <ENVIRONMENT_CONTEXT>
02:message/user:
    function call limit push
03:message/user:
    <COMPACTION_SUMMARY>
    AUTO_SUMMARY
